
PIG-4028: add a flag to control the ivy resolve/retrieve output (gkesavan via daijy)

PIG-4015: Provide a way to disable auto-parallism in tez (daijy)

PIG-3846: Implement automatic reducer parallelism (daijy)

PIG-3939: SPRINTF function to format strings using a printf-style template (mrflip via cheolsoo)

PIG-3970: Merge Tez branch into trunk (daijy)
 
OPTIMIZATIONS
 
BUG FIXES

PIG-4151: Pig Cannot Write Empty Maps to HBase (daijy)

PIG-4181: Cannot launch tez e2e test on Windows (daijy)

PIG-2834: MultiStorage requires unused constructor argument (daijy)

PIG-4230: Documentation fix: first nested foreach example is incomplete (lbendig via daijy)

PIG-4199: Mapreduce ACLs should be translated to Tez ACLs (rohini)

PIG-4227: Streaming Python UDF handles bag outputs incorrectly (cheolsoo)

PIG-4219: When parsing a schema, pig drops tuple inside of Bag if it contains only one field (lbendig via daijy)

PIG-4226: Upgrade Tez to 0.5.1 (daijy)

PIG-4220: MapReduce-based Rank failing with NPE due to missing Counters (knoguchi)

PIG-3985: Multiquery execution of RANK with RANK BY causes NPE (rohini)

PIG-4218: Pig OrcStorage fail to load a map with null key (daijy)

PIG-4164: After Pig job finish, Pig client spend too much time retry to connect to AM (daijy)

PIG-4212: Allow LIMIT of 0 for variableLimit (constant 0 is already allowed) (knoguchi)

PIG-4196: Auto ship udf jar is broken (daijy)

PIG-4214: Fix unit test fail TestMRJobStats (daijy)

PIG-4217: Fix documentation in BuildBloom (praveenr019 via daijy)

PIG-4215: Fix unit test failure TestParamSubPreproc and TestMacroExpansion (daijy)

PIG-4175: PIG CROSS operation follow by STORE produces non-deterministic results each run (daijy)

PIG-4202: Reset UDFContext state before OutputCommitter invocations in Tez (rohini)

PIG-4205: e2e test property-check does not check all prerequisites (kellyzly via daijy)

PIG-4180: e2e test Native_3 fail on Hadoop 2 (daijy)

PIG-4178: HCatDDL_[1-3] fail on Windows (daijy)
